--- a/SAEv2/shop/templates/shop/index.html
+++ b/SAEv2/shop/templates/shop/index.html
@@ -14,8 +14,10 @@ ShopKart | Online Shopping
       {% for item in products %}
       <div class="col-md-4 col-lg-3">
         <div class="card my-3">
+          {% if item.product_image %}
           <img src="{{item.product_image.url}}"  class="card-image-top" alt="Categories">
-          <a href="{% url 'product_details' item.category.name item.name %}">
+          {% endif %}
+          <a href="products/product_details/{{item.id}}">
           <div class="card-body">
             <h5 class="card-title text-primary">{{ item.name }}</h5>
             <p class="card-text">
