--- a/SAEv2/shop/templates/shop/cart.html
+++ b/SAEv2/shop/templates/shop/cart.html
@@ -24,7 +24,9 @@
 
             {% for item in cart %}
            <tr>
+               {% if item.products.product_image %}
               <td><img src="{{item.product.product_image.url}}" height="75px" alt="{{item.product.name}}"></td>
+               {% endif %}
               <td>{{item.product.name}}</td>
               <td>{{item.product.selling_price | stringformat:'d'}}</td>
               <td>{{item.product_qty}}</td>
